<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fp_base_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".ui.login.fragment.ForgotPasswordFragment">


    <FrameLayout
        android:id="@+id/image_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_fp_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:contentDescription="@string/img_desc"
            android:minWidth="300dp"
            android:minHeight="90dp"
            android:scaleType="fitCenter"
            android:src="@drawable/img_logo_splash" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fp_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:background="@drawable/bg_login_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_frame">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fp_content_clay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_30"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fb_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_10"
                android:gravity="center"
                android:text="@string/forgot_password_lbl"
                android:textSize="@dimen/text_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:gravity="start"
                android:text="@string/emailid"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fb_lbl" />

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_margin_50"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_lbl">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:layout_marginEnd="@dimen/common_margin_20"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <TextView
                android:id="@+id/question_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:gravity="start"
                android:text="@string/your_secret_ques"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout" />

            <LinearLayout
                android:id="@+id/question_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_margin_50"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_lbl">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/question_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:layout_marginEnd="@dimen/common_margin_20"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_dropdown_arrow"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/select"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <TextView
                android:id="@+id/answer_lbl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:gravity="start"
                android:text="@string/your_secret_answer"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_layout" />

            <LinearLayout
                android:id="@+id/answer_layout"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_margin_50"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_5"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_5"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_lbl">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/answer_etext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_margin_20"
                    android:layout_marginEnd="@dimen/common_margin_20"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center|start"
                    android:hint="@string/enter_answer"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint_color"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_15" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_password_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/common_margin_45"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginTop="@dimen/common_margin_20"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:layout_marginBottom="@dimen/common_margin_20"
                android:background="@drawable/btn_bg_colorprimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/answer_layout" />

            <LinearLayout
                android:id="@+id/back_login_lay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin_25"
                android:layout_marginEnd="@dimen/common_margin_25"
                android:gravity="bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:id="@+id/fp_divider_view"
                    style="@style/view_theme" />

                <TextView
                    android:id="@+id/back_to_tview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/common_margin_20"
                    android:drawableStart="@drawable/ic_back_arrow_green"
                    android:drawablePadding="@dimen/common_margin_5"
                    android:gravity="center"
                    android:text="@string/back_to_login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>